...
    @State var show_coinos_options: Bool = false
    var nav: NavigationCoordinator
    let userKeypair: Keypair
    
    var body: some View {
        MainContent
            .navigationTitle(NSLocalizedString("Wallet", comment: "Navigation title for attaching Nostr Wallet Connect lightning wallet."))
            .navigationBarTitleDisplayMode(.inline)
            .onChange(of: wallet_scan_result) { res in
                scanning = false
                
                switch res {
                case .success(let url):
...
        VStack(spacing: 10) {
            Text("AUTOMATIC SETUP", comment: "Heading for the section that performs an automatic wallet connection setup.")
                .font(.caption)
                .padding(.top)
                .foregroundStyle(PinkGradient)
            
            Text("Create new wallet", comment: "Button text for creating a new wallet.")
                .font(.title)
                .fontWeight(.bold)
            
            Text("Easily create a new wallet and attach it to your account.", comment: "Description for the create new wallet feature.")
                .font(.body)
                .multilineTextAlignment(.center)
...
            
            Button(action: {
                nav.push(route: Route.WalletScanner(result: $wallet_scan_result))
            }) {
                HStack {
                    Image("qr-code")
                    Text("Scan NWC Address", comment: "Text for button to connect a lightning wallet.")
                        .fontWeight(.semibold)
                }
                .frame(minWidth: 250, maxWidth: .infinity, maxHeight: 15, alignment: .center)
            }
            .buttonStyle(GradientButtonStyle())
            .padding(.horizontal)
...
